stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c:26:29: error: unknown type name 'CircularBuffer'
   26 | bool CircularBuffer_IsEmpty(CircularBuffer *self)
      |                             ^~~~~~~~~~~~~~
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
